Upgrade actions/cache from v1 to v4 (#43)
* Upgrade actions/cache from v1 to v4

* maven complier issue fix

* code refactor

* code refactor