@@ -14,7 +14,6 @@
     <name>mcUserService</name>
     <description>Demo project for Spring Boot</description>
     <properties>
-        <!-- JaCoCo Properties -->
         <jacoco.version>0.8.11</jacoco.version>
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
@@ -215,11 +214,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
+                                <version>3.11.0</version>
+                                <configuration>
+                                    <source>21</source>
+                                    <target>21</target>
+<!--                                    <compilerArgs>-->
+<!--                                        <arg>&#45;&#45;enable-preview</arg>-->
+<!--                                    </compilerArgs>-->
+                                </configuration>
             </plugin>
 
         </plugins>
